<resources>
    <string name="app_name">Настройка ароматизатора</string>
    <string name="turn_on">Включить Bluetooth</string>
    <string name="discoverable">Сделать устройство\nвидимым</string>
    <string name="refresh">Обновить</string>
    <string name="hint">Введите серийник</string>
    <string name="start_discovery">Начать поиск</string>
    <string name="discovering">Поиск...</string>
    <string name="bt_already">Bluetooth уже включен</string>
    <string name="warn_bt">Bluetooth был выключен!</string>
    <string name="u_have_to_bt">Вы должны включить Bluetooth</string>
    <string name="wrong_sr">Серийник должен быть 6-значным</string>
    <string name="deny_permission">Разрешение не получено!</string>
    <string name="stop_process">Разъединение...</string>
    <string name="stop">Разъединить</string>
    <string name="send">Отправить</string>
    <string name="title_activity_sending">Настройка режимов работы</string>
    <string name="action_settings">Настройка</string>
    <string name="day_pn">Пн</string>
    <string name="day_vt">Вт</string>
    <string name="day_sr">Ср</string>
    <string name="day_cht">Чт</string>
    <string name="day_pt">Пт</string>
    <string name="day_sb">Сб</string>
    <string name="day_vs">Вс</string>
    <string name="time_on">Время вкл\n00:00</string>
    <string name="time_off">Время выкл\n00:00</string>
    <string name="interval">Интервал</string>
    <string name="begin_interval">90</string>
    <string name="procrab">Процент раб</string>
    <string name="begin_procrab">5</string>
    <string name="ventilator">Вентилятор</string>
    <string name="begin_ventilator">155</string>
    <string name="nasos">Насос</string>
    <string name="begin_nasos">200</string>
    <string name="textTime">Состояние:\n\nВремя:\n\nДень:\n\nДата:\n\n</string>
</resources>
