<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bluetooth_project.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonTurnOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_on" />

                <Button
                    android:id="@+id/buttonDiscovery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_discovery" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonDiscoverable"
                    android:text="@string/discoverable"/>

                <Button
                    android:id="@+id/buttonRefresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh" />

            </LinearLayout>

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:visibility="invisible"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/buttonSend"
                android:text="@string/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
